package basisFx.appCore.menu;


public class MenuLeaf extends MenuComponent{


    @Override
    public boolean isComposit() {
        return false;
    }

}
